versions/v4.0.0/samples/boards/nordic/index.md
---
version: v4.0.0
source_url: https://docs.zephyrproject.org/4.0.0/samples/boards/nordic/index.html
original_path: samples/boards/nordic/index.html
---

# Nordic Semiconductor

These samples showcase the use of Nordic Semiconductor boards in Zephyr.

- [Battery Voltage Measurement](battery/README.md#nrf_battery "Measure the voltage of the device power supply.")Measure the voltage of the device power supply.
- [Dynamic Pin Control](dynamic_pinctrl/README.md#nrf_dynamic_pinctrl "Dynamically change pin configuration at boot time.")Dynamically change pin configuration at boot time.
- [IEEE 802.15.4 over RPMsg](ieee802154/802154_rpmsg/README.md#nrf_ieee802154_rpmsg "Expose nRF IEEE 802.15.4 radio driver to another device or CPU using RPMsg transport.")Expose nRF IEEE 802.15.4 radio driver to another device or CPU using RPMsg transport.
- [LED matrix](nrf_led_matrix/README.md#nrf_led_matrix "Use the nRF LED matrix display driver to drive an LED matrix.")Use the nRF LED matrix display driver to drive an LED matrix.
- [Mesh Models](mesh/onoff_level_lighting_vnd_app/README.md#nrf_bluetooth_mesh_onoff_level_lighting_vnd_app "Setup a Bluetooth Mesh node with various models (generic OnOff, generic Level, ...).")Setup a Bluetooth Mesh node with various models (generic OnOff, generic Level, ...).
- [Mesh OnOff Model](mesh/onoff-app/README.md#nrf_bluetooth_mesh_onoff "Control LEDs on a mesh network using the Bluetooth Mesh OnOff model.")Control LEDs on a mesh network using the Bluetooth Mesh OnOff model.
- [nRF5x Clock Skew](clock_skew/README.md#nrf_clock_skew "Measure the skew between the high-frequency and low-frequency clocks.")Measure the skew between the high-frequency and low-frequency clocks.
- [nrfx](nrfx/README.md#nrf_nrfx "Use nrfx library to interact with nRF peripherals.")Use nrfx library to interact with nRF peripherals.
- [nrfx peripheral resource sharing](nrfx_prs/README.md#nrf_nrfx_prs "Use nRF peripherals that share the same ID and base address.")Use nRF peripherals that share the same ID and base address.
- [Synchronized RTC](nrf53_sync_rtc/README.md#nrf_sync_rtc "Synchronize system and network core RTC clocks.")Synchronize system and network core RTC clocks.
- [System Off](system_off/README.md#nrf_system_off "Use deep sleep on Nordic platforms.")Use deep sleep on Nordic platforms.
